--- a/wiki/isssesMoved2Github.wiki
+++ b/wiki/isssesMoved2Github.wiki
@@ -1,3 +1,8 @@
 The mailsend issue tracking [https://github.com/muquit/mailsend/issues is moved to GitHub]. 
 
 The project is in the process of moving there as well.
+
+Thanks!
+
+--
+updated: Jan-16-2014 
