--- a/wiki/isssesMoved2Github.wiki
+++ b/wiki/isssesMoved2Github.wiki
@@ -1,8 +1,1 @@
-The mailsend issue tracking [https://github.com/muquit/mailsend/issues is moved to GitHub]. 
-
-The project is in the process of moving there as well.
-
-Thanks!
-
---
-updated: Jan-16-2014 
+= Moved to !GitHub [https://github.com/muquit/mailsend/issues] =
